# game_dev_assignment_3_and_assignment_4

./: .gitignore  CMakeLists.txt  NOTES.md  run_demo.sh
blender/: Untitled.animbin  Untitled.meshbin  animbin.py  box.meshbin  iso.meshbin  meshbin.py  monkey.meshbin  suzz.meshbin  torus.meshbin
demo/: DoomDemo.cpp  README.md  RTSDemo.cpp
demo/shaders/: rts.frag  rts.vert
docs/: _config.yml  animation-controller-flow.md  architecture.md  assignment-4-guide.md  collision-pipeline-flow.md  demo-guide.md  design-tradeoffs.md  index.md  mathematics.md  module-reference.md  objective-a-guide.md  objective-b-report.md  objective-c-guide.md  objective-d-guide.md  objective-e-guide.md  objective_b_benchmark.csv  presentation.md  runtime-flow.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/assets/js/: presentation.js
src/: AnimationClip.h  AnimationLoader.h  AppLayer.cpp  BuildingSystem.cpp  BuildingSystem.h  CollisionResponse.h  ConvexCollision.h  DeferredRenderer.cpp  DeferredRenderer.h  Engine.cpp  Engine.h  FogOfWar.cpp  FogOfWar.h  GameObject.cpp  GameObject.h  Integration.h  MeshDiscovery.cpp  MeshDiscovery.h  MeshLoader.cpp  MeshLoader.h  Quaternion.cpp  Quaternion.h  Renderer3D.cpp  Renderer3D.h  RtsAi.cpp  RtsAi.h  RtsCombat.cpp  RtsCombat.h  RtsEconomy.cpp  RtsEconomy.h  RtsPathfinder.cpp  RtsPathfinder.h  RtsProduction.cpp  RtsProduction.h  RtsTypes.h  RtsUnit.cpp  RtsUnit.h  RtsWorld.cpp  RtsWorld.h  SDL_Manager.cpp  (+19 more)
src/shaders/: deferred_gbuffer.frag  deferred_light.frag  deferred_light.vert  world.frag  world.vert
tests/: ObjectiveA_test.cpp  ObjectiveBC_test.cpp  ObjectiveB_test.cpp  ObjectiveD_test.cpp  ObjectiveE_test.cpp  RtsWorld_test.cpp
tools/: ObjectiveB_Benchmark.cpp
